[gd_scene load_steps=3 format=3 uid="uid://douaugikqj4k4"]

[ext_resource type="Script" path="res://Scripts/UI/Sitio.gd" id="1_065dv"]
[ext_resource type="PackedScene" uid="uid://boyo78e7myi2o" path="res://Scenes/UI/Signal_sitio.tscn" id="2_ggcly"]

[node name="Sitio" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("1_065dv")
signal_scene = ExtResource("2_ggcly")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="estado_enlace" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="numero_id" type="Label" parent="VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "01
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nombre_fecha_contaier" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/nombre_fecha_contaier"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="nombre_sitio" type="Label" parent="VBoxContainer/HBoxContainer/nombre_fecha_contaier/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Nombre Sitio"

[node name="fecha_sitio" type="Label" parent="VBoxContainer/HBoxContainer/nombre_fecha_contaier/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "00:00hrs, 00/00/0000"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/nombre_fecha_contaier"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="señales_sitios" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Señal" parent="VBoxContainer/PanelContainer/señales_sitios" instance=ExtResource("2_ggcly")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/nombre_fecha_contaier/Button" to="." method="_on_button_pressed"]
